Merchant -add map v1

--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -29,7 +29,7 @@
         />
 
     <TextView
-        android:id="@+id/lattitude"
+        android:id="@+id/latitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
@@ -51,4 +51,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+
+    <Button
+        android:id="@+id/seeMap"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Voir sur la carte"
+        />
+
 </LinearLayout>
