--- a/app/src/main/res/layout/activity_business_location.xml
+++ b/app/src/main/res/layout/activity_business_location.xml
@@ -5,4 +5,4 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.MapBusiness" />
+    tools:context=".reza.discount.activities.BusinessLocation" />
