--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -9,13 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".reza.discount.activities.BusinessResults"
-    tools:showIn="@layout/app_bar_item_research">
-
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/getdata" />
+    tools:context="com.rezadiscount.rezadiscount.reza.discount.utilities.Drawer"
+    tools:showIn="@layout/activity_drawer">
 
 </RelativeLayout>
