#7 started string system. Note : split string files in one for each activity

--- a/app/src/main/res/layout/activity_business_filter_research.xml
+++ b/app/src/main/res/layout/activity_business_filter_research.xml
@@ -14,7 +14,7 @@
         android:id="@+id/research"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Rechercher"
+        android:text="@string/search_button"
         />
 
 </RelativeLayout>
