--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -21,7 +21,7 @@
         android:id="@+id/inscription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="S&apos;inscrire"
+        android:text="@string/subscribe_button"
         android:layout_below="@+id/connexion"
         android:layout_alignRight="@+id/connexion"
         android:layout_alignEnd="@+id/connexion"
@@ -32,7 +32,7 @@
         android:id="@+id/connexion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connexion"
+        android:text="@string/connexion_button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ou s&apos;inscrire avec :"
+        android:text="@string/or_subscribe_with"
         android:id="@+id/textView2"
         android:layout_below="@+id/inscription"
         android:layout_centerHorizontal="true"
