--- a/app/src/main/res/layout/activity_business_filter_research.xml
+++ b/app/src/main/res/layout/activity_business_filter_research.xml
@@ -1,20 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".reza.discount.activities.BusinessFilterResearch">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
 
-    <Button
-        android:id="@+id/research"
-        android:layout_height="wrap_content"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".reza.discount.activities.BusinessFilterResearch">
+
+
+        <Button
+            android:id="@+id/research"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/search_button" />
+
+    </RelativeLayout>
+
+
+
+    <include
+        layout="@layout/app_bar_item_research"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:text="@string/search_button"
-        />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_item_research"
+        app:menu="@menu/activity_item_list_view_drawer" />
 
-</RelativeLayout>
+
+</android.support.v4.widget.DrawerLayout>
