--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -14,8 +14,43 @@
         android:id="@+id/imageView2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="63dp"
         android:src="@drawable/logo" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/email"
+        android:hint="username"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwd"
+        android:hint="password"
+        android:layout_below="@+id/email"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true" />
+
+
+    <Button
+        android:id="@+id/connexion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/connexion_button"
+        android:layout_below="@+id/passwd"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/inscription"
@@ -28,16 +63,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/connexion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/connexion_button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -58,7 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerInParent="true"
-        tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SignInUp">
+        tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SignInUp"
+        android:id="@+id/linearLayout">
 
 
         <ImageView
@@ -89,4 +115,6 @@
             android:id="@+id/twitter"
             android:src="@drawable/twitter" />
     </LinearLayout>
+
+
 </RelativeLayout>
