--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/email"
+        android:id="@+id/email_field"
         android:hint="username"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -34,9 +34,9 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/passwd"
+        android:id="@+id/passwd_field"
         android:hint="password"
-        android:layout_below="@+id/email"
+        android:layout_below="@+id/email_field"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true" />
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/connexion_button"
-        android:layout_below="@+id/passwd"
+        android:layout_below="@+id/passwd_field"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true" />
