--- a/app/src/main/res/layout/activity_business_filter_research.xml
+++ b/app/src/main/res/layout/activity_business_filter_research.xml
@@ -20,6 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <ListView
+            android:id="@+id/list_categories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </ListView>
+
+
         <Button
             android:id="@+id/research"
             android:layout_width="wrap_content"
