--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,7 +54,7 @@
             android:id="@+id/seeMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Voir sur la carte" />
+            android:text="@string/book" />
 
     </LinearLayout>
 
