--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SignInUp"
-    android:background="#6070a7">
+    android:background="#cdeaff">
 
 
     <com.facebook.login.widget.LoginButton
@@ -42,14 +42,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/connexion_button"
-        android:layout_below="@+id/passwd_field"/>
+        android:layout_below="@+id/passwd_field"
+        android:background="@color/com_facebook_blue"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/inscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/subscribe_button"
-        android:layout_below="@+id/connexion"/>
+        android:layout_below="@+id/connexion"
+        android:background="@color/com_facebook_blue"
+        android:textColor="@color/white"/>
 
 
 </RelativeLayout>
