Subscription task left : - 2nd password - Error messages - After sub go the right activity - Date coming from Facebook

--- a/app/src/main/res/menu/activity_item_list_view_drawer.xml
+++ b/app/src/main/res/menu/activity_item_list_view_drawer.xml
@@ -5,9 +5,9 @@
 
 
         <item
-            android:id="@+id/profil"
+            android:id="@+id/discount"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Profil" />
+            android:title="@string/discount" />
 
 
         <item
