--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -31,9 +31,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/password"
-        android:inputType="textPassword"
-        android:id="@+id/password" />
+        android:id="@+id/password"
+        android:inputType="textPassword" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/password"
+        android:id="@+id/passwd_repeat"
+        android:inputType="textPassword" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +52,7 @@
         android:onClick="showDatePicker" />
 
 
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/gender_radio"
