--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -8,6 +8,9 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        card_view:cardBackgroundColor="@color/colorAccent"
+        card_view:cardElevation="2sp"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="4dp">
 
         <LinearLayout
