--- a/app/src/main/res/layout/my_shops_fragment.xml
+++ b/app/src/main/res/layout/my_shops_fragment.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".reza.discount.activities.CustomDealFragment">
-
+    <!-- A RecyclerView with some commonly used attributes -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 </RelativeLayout>
