--- a/app/src/main/res/menu/activity_item_list_view_drawer.xml
+++ b/app/src/main/res/menu/activity_item_list_view_drawer.xml
@@ -19,6 +19,11 @@
             android:icon="@drawable/ic_today_black_24dp"
             android:title="@string/agenda" />
 
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/settings" />
+
     </group>
 
 
