--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:background="#cdeaff"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SignInUp"
-    android:background="#cdeaff">
+    tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SignInUp">
 
 
     <com.facebook.login.widget.LoginButton
@@ -14,46 +15,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp" />
 
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
         android:id="@+id/email_field"
-        android:hint="username"
-        android:layout_below="@+id/login_button"/>
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:layout_below="@+id/login_button"
         android:ems="10"
+        android:hint="username"
+        android:inputType="textEmailAddress" />
+
+    <EditText
         android:id="@+id/passwd_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email_field"
+        android:ems="10"
         android:hint="password"
-        android:layout_below="@+id/email_field"/>
+        android:inputType="textPassword" />
 
 
     <Button
         android:id="@+id/connexion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/connexion_button"
         android:layout_below="@+id/passwd_field"
         android:background="@color/com_facebook_blue"
+        android:text="@string/connexion_button"
         android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/inscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subscribe_button"
         android:layout_below="@+id/connexion"
         android:background="@color/com_facebook_blue"
+        android:text="@string/subscribe_button"
         android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/inscription" />
 
 
 </RelativeLayout>
