- Deconnexion button functionnal - String for french

--- a/app/src/main/res/menu/activity_item_list_view_drawer.xml
+++ b/app/src/main/res/menu/activity_item_list_view_drawer.xml
@@ -20,9 +20,9 @@
             android:title="@string/agenda" />
 
         <item
-            android:id="@+id/settings"
+            android:id="@+id/deconnection"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/settings" />
+            android:title="@string/deconnection" />
 
     </group>
 
