- Navigation through category functionnal (but not the final design)

--- a/app/src/main/res/menu/activity_item_list_view_drawer.xml
+++ b/app/src/main/res/menu/activity_item_list_view_drawer.xml
@@ -20,9 +20,9 @@
             android:title="@string/agenda" />
 
         <item
-            android:id="@+id/deconnection"
+            android:id="@+id/logout"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/deconnection" />
+            android:title="@string/logout" />
 
     </group>
 
