- Choose which server you're gonna target

--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -63,4 +63,27 @@
         android:layout_below="@+id/inscription" />
 
 
+    <RadioGroup
+        android:id="@+id/url_rb"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/error"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/dev_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Dev" />
+
+        <RadioButton
+            android:id="@+id/preprod_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Preprod" />
+    </RadioGroup>
+
+
 </RelativeLayout>
