--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -4,39 +4,44 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cdeaff"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SubscribeActivity">
 
 
     <EditText
         android:id="@+id/lastname"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/lastname" />
 
     <EditText
         android:id="@+id/firstname"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/firstname" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/email"
         android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/passwd_repeat"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="@string/password_repeat"
         android:inputType="textPassword" />
@@ -44,7 +49,7 @@
     <TextView
         android:id="@+id/birthday"
         style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:hint="@string/birthday"
@@ -69,9 +74,12 @@
 
     <Button
         android:id="@+id/subscribe"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subscribe_button" />
+        android:layout_marginTop="10dp"
+        android:background="@color/com_facebook_blue"
+        android:text="@string/subscribe_button"
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
