- Forgot my password feature - Single line fields - Code improvement

--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -17,34 +17,39 @@
         android:id="@+id/lastname"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="@string/lastname" />
+        android:hint="@string/lastname"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/firstname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/firstname" />
+        android:hint="@string/firstname"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/passwd_repeat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password_repeat"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:singleLine="true" />
 
     <TextView
         android:id="@+id/birthday"
