--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -12,7 +12,7 @@
 
     <EditText
         android:id="@+id/mail_forgotten"
-        android:layout_width="200dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -21,7 +21,7 @@
         android:inputType="textEmailAddress" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/send_email"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -30,4 +30,6 @@
         android:background="@color/com_facebook_blue"
         android:text="@string/reset_password"
         android:textColor="@color/white" />
+
+
 </RelativeLayout>
