--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cdeaff"
+    android:background="@color/red0"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwd_field"
         android:layout_marginTop="10dp"
-        android:background="@color/com_facebook_blue"
+        android:background="@color/red2"
         android:text="@string/connexion_button"
         android:textColor="@color/white"/>
 
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/connexion"
         android:layout_marginTop="10dp"
-        android:background="@color/com_facebook_blue"
+        android:background="@color/red2"
         android:text="@string/subscribe_button"
         android:textColor="@color/white"/>
 
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/inscription"
         android:layout_marginTop="10dp"
-        android:background="@color/com_facebook_blue"
+        android:background="@color/red2"
         android:text="@string/password_forgotten"
         android:textColor="@color/white" />
 
