--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -25,11 +25,11 @@
         <item name="android:colorPrimaryDark">@color/com_facebook_button_background_color_pressed
         </item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="android:colorAccent">@color/com_facebook_blue</item>
+        <item name="android:colorAccent">@color/red7</item>
     </style>
 
     <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar.Solid">
-        <item name="background">@color/com_facebook_blue</item>
+        <item name="background">@color/red6</item>
         <item name="titleTextStyle">@style/MyTitleTextStyle</item>
     </style>
 
