--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <item name="blue" type="color">#FF33B5E5</item>
-    <item name="purple" type="color">#FFAA66CC</item>
-    <item name="green" type="color">#FF99CC00</item>
     <item name="orange" type="color">#FFFFBB33</item>
-    <item name="red" type="color">#FFFF4444</item>
-    <item name="darkblue" type="color">#FF0099CC</item>
-    <item name="darkpurple" type="color">#FF9933CC</item>
-    <item name="darkgreen" type="color">#FF669900</item>
     <item name="darkorange" type="color">#FFFF8800</item>
-    <item name="darkred" type="color">#FFCC0000</item>
+
+    <item name="purple" type="color">#FFAA66CC</item>
+    <item name="darkpurple" type="color">#FF9933CC</item>
+
+    <item name="blue" type="color">#FF33B5E5</item>
+    <item name="darkblue" type="color">#FF0099CC</item>
+
+    <item name="green" type="color">#FF99CC00</item>
+    <item name="darkgreen" type="color">#FF669900</item>
+
+    <item name="red0" type="color">#ffe5e5</item>
+    <item name="red1" type="color">#ffcccc</item>
+    <item name="red2" type="color">#ffb2b2</item>
+    <item name="red3" type="color">#ff9999</item>
+    <item name="red4" type="color">#ff7f7f</item>
+    <item name="red5" type="color">#ff6666</item>
+    <item name="red6" type="color">#ff4c4c</item>
+    <item name="red7" type="color">#ff3232</item>
+    <item name="red8" type="color">#FFCC0000</item>
+
     <item name="white" type="color">#FFFFFFFF</item>
+
     <color name="colorPrimary">#125688</color>
     <color name="colorPrimaryDark">#125688</color>
     <color name="textColorPrimary">#FFFFFF</color>
@@ -24,13 +37,21 @@
         <item>@color/purple</item>
         <item>@color/green</item>
         <item>@color/orange</item>
-        <item>@color/red</item>
         <item>@color/darkblue</item>
         <item>@color/darkpurple</item>
         <item>@color/darkgreen</item>
         <item>@color/darkorange</item>
-        <item>@color/darkred</item>
         <item>@color/white</item>
+
+        <item>@color/red0</item>
+        <item>@color/red1</item>
+        <item>@color/red2</item>
+        <item>@color/red3</item>
+        <item>@color/red4</item>
+        <item>@color/red5</item>
+        <item>@color/red6</item>
+        <item>@color/red7</item>
+        <item>@color/red8</item>
     </integer-array>
 
 </resources>
